Update clone and rename some variables

--- a/project/Makefile
+++ b/project/Makefile
@@ -322,16 +322,16 @@ COMPILER_INFO_DONE := $(GENERATION_DIR)/.compiler-info
 DOWNLOAD_DIR := $(BUILD_DIR)/downloaded
 
 #? Name of the directory holding third parties libraries (external libraries).
-THIRD_PARTIES ?= external
-THIRD_PARTIES_DIR := $(abspath $(P)/$(THIRD_PARTIES))
+THIRD_PARTIES_FOLDER_NAME ?= external
+THIRD_PARTIES_DIR := $(abspath $(P)/$(THIRD_PARTIES_FOLDER_NAME))
 
 #? Name of the directory holding documentation.
-PROJECT_DOC ?= doc
-PROJECT_DOC_DIR := $(abspath $(P)/$(PROJECT_DOC))
+DOC_FOLDER_NAME ?= doc
+PROJECT_DOC_DIR := $(abspath $(P)/$(DOC_FOLDER_NAME))
 
 #? Name of the directory holding generated reports.
-PROJECT_GENERATED_DOC ?= doc
-PROJECT_GENERATED_DOC_DIR := $(abspath $(P)/$(PROJECT_GENERATED_DOC))
+PROJECT_GENERATED_FOLDER_NAME ?= doc
+PROJECT_GENERATED_DOC_DIR := $(abspath $(P)/$(PROJECT_GENERATED_FOLDER_NAME))
 
 #? Directory where Doxygen is generated
 GENERATED_DOXYGEN_DIR ?= $(PROJECT_GENERATED_DOC_DIR)/doxygen
@@ -345,8 +345,8 @@ GPROF_ANALYSIS_FOLDER := $(dir $(GPROF_ANALYSIS))
 COVERAGE_RAPPORT ?= $(PROJECT_GENERATED_DOC_DIR)/code-coverage/coverage.html
 
 #? Define the directory holding project data.
-PROJECT_DATA ?= data
-PROJECT_DATA_DIR := $(abspath $(P)/$(PROJECT_DATA))
+DATA_FOLDER_NAME ?= data
+PROJECT_DATA_DIR := $(abspath $(P)/$(DATA_FOLDER_NAME))
 
 #? Define the directory holding unit tests.
 PROJECT_TESTS ?= tests
@@ -393,6 +393,7 @@ PATH_MYMAKEFILE_SCRIPTS := $(abspath $(M)/assets/scripts)
 SCRIPT_CONFIG := $(PATH_MYMAKEFILE_SCRIPTS)/config.sh
 SCRIPT_EXTRACT_STATIC_LIB := $(PATH_MYMAKEFILE_SCRIPTS)/alib.sh
 SCRIPT_TAR_PROJECT := $(PATH_MYMAKEFILE_SCRIPTS)/targz.sh
+SCRIPT_GIT_CLONE := $(PATH_MYMAKEFILE_SCRIPTS)/clone.sh
 SCRIPT_DOWNLOAD_THIRD_PARTIES := $(PATH_MYMAKEFILE_SCRIPTS)/download-external-libs.sh
 SCRIPT_COMPILE_THIRD_PARTIES := $(PATH_MYMAKEFILE_SCRIPTS)/compile-external-libs.sh
 PROJECT_MANIFEST_THIRD_PARTIES := $(THIRD_PARTIES_DIR)/manifest
